Fix: Remove redundant episode tags and texts

--- a/core/data/meta/podcast/korrespondenz_epos.html
+++ b/core/data/meta/podcast/korrespondenz_epos.html
@@ -751,7 +751,7 @@
                 </div>
             </div>
 
-            <div class="episode-tag">E02: Korrespondenz Epos</div>
+            <div class="episode-tag">E02: Das Epos</div>
             <h2 class="episode-title">Korrespondenz Epos</h2>
 
             <div class="info-bar">
