--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -751,7 +751,7 @@
                 </div>
             </div>
 
-            <div class="episode-tag">E01: Korrespondenz System Analyse</div>
+            <div class="episode-tag">E01: Das Kompendium</div>
             <h2 class="episode-title">Korrespondenz System Analyse</h2>
 
             <div class="info-bar">
