Fix: Remove redundancy in index and correct E02 audio link

--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -711,7 +711,7 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">E01: Korrespondenz System Analyse</div>
+                    <div class="episode-tag">E01: Das Kompendium</div>
                     <h2 class="episode-title">Korrespondenz System Analyse</h2>
 
                     <div class="info-bar">
@@ -793,7 +793,7 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">E02: Korrespondenz Epos</div>
+                    <div class="episode-tag">E02: Das Epos</div>
                     <h2 class="episode-title">Korrespondenz Epos</h2>
 
                     <div class="info-bar">
@@ -852,8 +852,7 @@
                                 oninput="setVolume(2, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-2"
-                        src="../audio/das_villa_kunterbunt_kompendium_die_erste_studienanalyse.mp3"
+                    <audio id="audio-player-2" src="../audio/villa_kunterbunt_korrespondenz_epos.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="korrespondenz_epos.html" class="action-link">Zur Folge</a>
