Fix: Tighten layout in abook.html and add Episode 6 note

--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -651,7 +651,15 @@
                 die Abgründe des modernen Dienstleistungswesens.
             </div>
             <button class="read-more-btn" id="read-more-btn" onclick="toggleDescription()">MEHR ANZEIGEN</button>
-            <div class="player-controls">
+
+            <!-- Note about missing Episode 6 -->
+            <div style="margin-top: 15px; font-size: 0.8rem; color: var(--accent-gold); opacity: 0.8;">
+                <span style="margin-right: 5px;">ℹ️</span>
+                Episode 6 (Systemanalyse) ist jetzt Teil des <a href="../../meta/podcast/index.html"
+                    style="color: var(--accent-gold); text-decoration: underline;">Kompendiums</a> (E01).
+            </div>
+
+            <div class="player-controls" style="margin-top: 10px; gap: 15px;">
                 <button class="control-btn" onclick="skip(-30)" title="-30s">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M11 18V6l-8.5 6 8.5 6zm.5-6l8.5 6V6l-8.5 6z" />
