UI: Harmonize TTS/QUELLE button spacing (15px gap)

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -464,7 +464,14 @@
                 opacity: 1;
                 transform: translateY(0);
             }
+        }
 
+        /* Info & Source Buttons */
+        .info-bar {
+            display: flex;
+            gap: 15px;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
             justify-content: center;
         }
 
