--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -494,6 +494,15 @@
             }
         }
 
+        /* Info & Source Buttons */
+        .info-bar {
+            display: flex;
+            gap: 15px;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
         .info-btn {
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid var(--glass-border);
